authentication enhanced and bugs fixed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,19 +21,29 @@ jwt.expiration=3600000
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
-# ===================
-# OAUTH2 CONFIG
-# ===================
-
-# # Common OAuth2 settings
-
-
 spring.devtools.restart.enabled=false
 
-#Email Service 
+# ===================
+# Email Service 
+# ===================
 spring.mail.username=mooc.org.auth@gmail.com
 spring.mail.password=yjut wkwm njws mvtm 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+# ===================
+# Redis
+# ===================
+spring.data.redis.host=redis-13256.c212.ap-south-1-1.ec2.redns.redis-cloud.com
+spring.data.redis.port=15426
+spring.data.redis.password=^DXv7!b)%n:~_!j
+spring.data.redis.ssl.enabled=true
+
+
+# ===================
+# sign-up: conifg 
+# ===================
+app.session.duration=20
+app.otp.duration=5
