--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -8,5 +8,15 @@
     "name": "jwt.expiration",
     "type": "java.lang.String",
     "description": "A description for 'jwt.expiration'"
+  },
+  {
+    "name": "app.session.duration",
+    "type": "java.lang.long",
+    "description": "A description for 'app.session.duration'"
+  },
+  {
+    "name": "app.otp.duration",
+    "type": "java.lang.long",
+    "description": "A description for 'app.otp.duration'"
   }
 ]}
