Final implementation with rate limiting and cooldown

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -47,3 +47,10 @@ spring.data.redis.ssl.enabled=true
 # ===================
 app.session.duration=20
 app.otp.duration=5
+
+# Rate limiting config
+ip.otp.limit=5
+ip.otp.limit.duration=5
+
+#seconds 
+otp.cooldown=30  
