--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,56 +1,50 @@
 # ===================
-# SPRING BOOT APP
+# SPRING BOOT IMPORT
+# ===================
+# Optional if using dotenv with dotenv-spring package
+# spring.config.import=dotenv://
+
+# ===================
+# APP CONFIG
 # ===================
 spring.application.name=AuthPortal
 server.port=8080
 
 # ===================
-# DATABASE CONFIG
+# MONGODB CONFIG
 # ===================
-spring.data.mongodb.uri=mongodb+srv://dhanesh76:DhAnEsHmongo5@mooc.sxm2q8w.mongodb.net/auth-portal?retryWrites=true&w=majority&appName=mooc
+spring.data.mongodb.uri=${MONGO_URI}
+
+# ===================
+# REDIS CONFIG
+# ===================
+spring.data.redis.host=${REDIS_HOST}
+spring.data.redis.port=${REDIS_PORT}
+spring.data.redis.username=${REDIS_USERNAME}
+spring.data.redis.password=${REDIS_PASSWORD}
+spring.data.redis.ssl.enabled=true
 
 # ===================
 # JWT CONFIG
 # ===================
-jwt.secret=JqTAvkBpEOo3EwIx2p5V+NlIFzMBORfR4dA3iiJPrLk=
-jwt.expiration=3600000
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION_MS}
 
 # ===================
-# LOGGING
+# EMAIL CONFIG
 # ===================
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
-
-spring.devtools.restart.enabled=false
-
-# ===================
-# Email Service 
-# ===================
-spring.mail.username=mooc.org.auth@gmail.com
-spring.mail.password=yjut wkwm njws mvtm 
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
-# ===================
-# Redis
-# ===================
-spring.data.redis.host=redis-13256.c212.ap-south-1-1.ec2.redns.redis-cloud.com
-spring.data.redis.port=15426
-spring.data.redis.password=^DXv7!b)%n:~_!j
-spring.data.redis.ssl.enabled=true
-
-
-# ===================
-# sign-up: conifg 
-# ===================
-app.session.duration=20
-app.otp.duration=5
-
-# Rate limiting config
-ip.otp.limit=5
-ip.otp.limit.duration=5
-
-#seconds 
-otp.cooldown=30  
+# =========================
+# OTP & SIGNUP CONFIG
+# =========================
+app.session.duration=${SIGNUP_SESSION_TTL}
+app.otp.duration=${OTP_TTL}
+otp.cooldown=${OTP_COOLDOWN}
+ip.otp.limit=${OTP_RATE_LIMIT}
+ip.otp.limit.duration=${OTP_RATE_DURATION}
